--- a/app/src/main/res/layout/fragment_add_room_utility.xml
+++ b/app/src/main/res/layout/fragment_add_room_utility.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.add_room.AddRoomUtilityFragment">
+    tools:context=".ui.add_room.AddRoomUtilityFragment">
 
 
 
