--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -26,26 +26,6 @@
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:src="@drawable/tro1" />
-
-            <TextView
-                android:id="@+id/title2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Căn hộ 1"
-                android:textColor="#000"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/titlePrice2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="4,3 triệu VND/căn"
-                android:textColor="#f00"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
             <TextView
                 android:id="@+id/titleAddress2"
                 android:layout_width="wrap_content"
@@ -54,6 +34,26 @@
                 android:text="88 Tân Hòa Đông, Quận 6"
                 android:textColor="#000"
                 android:textSize="18sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/title2"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Căn hộ 1"-->
+<!--                android:textColor="#000"-->
+<!--                android:textSize="22sp"-->
+<!--                android:textStyle="bold" />-->
+
+            <TextView
+                android:id="@+id/titlePrice2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="4,3 triệu VND/căn"
+                android:textColor="#ECA900"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
