Add MyRoomFragment and LoveFragment, Change Cardview Home

--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/white_rectangle_background">
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
