--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="colorPrimaryDark">#CC842B</color>
     <color name="colorPrimaryLight">#F8F7E9</color>
     <color name="colorAccent">#333333</color>
+    <color name="colorText">#ECA900</color>
 </resources>
