--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,4 +10,14 @@
         android:name="com.trinhtien2212.findhomerental.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/nav_myroom"
+        android:name="com.trinhtien2212.findhomerental.ui.myroom.MyRoomFragment"
+        android:label="My Room"
+        tools:layout="@layout/fragment_my_room" />
+    <fragment
+        android:id="@+id/nav_love"
+        android:name="com.trinhtien2212.findhomerental.ui.love.LoveFragment"
+        android:label="Love"
+        tools:layout="@layout/fragment_love" />
 </navigation>
