--- a/app/src/main/res/menu/distance_menu.xml
+++ b/app/src/main/res/menu/distance_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/item1"
-        android:title="500m"/>
-    <item android:id="@+id/item2"
-        android:title="1000m"/>
-    <item android:id="@+id/item3"
-        android:title="1500m"/>
+    <item android:id="@+id/filter_3000"
+        android:title="3000m"/>
+    <item android:id="@+id/filter_5000"
+        android:title="5000m"/>
+    <item android:id="@+id/filter_M5000"
+        android:title=">5000m"/>
 </menu>
