--- a/app/src/main/res/menu/price_menu.xml
+++ b/app/src/main/res/menu/price_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/sort1"
-        android:title="Giá tăng dần"/>
-    <item android:id="@+id/sort2"
-        android:title="Giá giảm dần"/>
+    <item android:id="@+id/item_distance_increase"
+        android:title="Khoảng cách tăng dần"/>
+    <item android:id="@+id/item_distance_decrease"
+        android:title="Khoảng cách giảm dần"/>
 </menu>
