--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,24 +11,24 @@
             android:id="@+id/nav_logout"
             app:iconTint="@color/design_default_color_error"
             android:icon="@drawable/logout"
-            android:title="Log out"></item>
+            android:title="@string/menu_logout"></item>
         <item android:id="@+id/nav_myroom"
-            android:title="My room"
+            android:title="@string/menu_myRoom"
             android:icon="@drawable/myroom"></item>
         <item android:id="@+id/nav_love"
-            android:title="Love"
+            android:title="@string/menu_love"
             android:icon="@drawable/love"></item>
         <item android:id="@+id/nav_share"
-            android:title="Share"
+            android:title="@string/menu_share"
             android:icon="@drawable/share"></item>
         <item android:id="@+id/nav_contactus"
-            android:title="Contact us"
+            android:title="@string/menu_contactus"
             android:icon="@drawable/contactus"></item>
         <item android:id="@+id/nav_warning"
-            android:title="Warning"
+            android:title="@string/menu_warn"
             android:icon="@drawable/warning"></item>
         <item android:id="@+id/nav_admin"
-            android:title="Admin"
+            android:title="@string/menu_admin"
             android:icon="@drawable/admin"></item>
     </group>
 </menu>
