--- a/app/src/main/res/layout/activity_room_detail.xml
+++ b/app/src/main/res/layout/activity_room_detail.xml
@@ -134,10 +134,12 @@
             </RelativeLayout>
 
             <RelativeLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:id="@+id/one"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     >
@@ -163,65 +165,32 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="30dp"
+
                         android:text="1 triệu"
                         android:textColor="#D2AF00"
                         android:textSize="16dp"></TextView>
                 </LinearLayout>
-
                 <LinearLayout
-                    android:id="@+id/dongcoc"
+                    android:layout_marginLeft="25dp"
+                    android:id="@+id/two"
+                    android:layout_toRightOf="@+id/one"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-
+                    android:orientation="vertical"
                     >
-
-
 
                     <ImageView
                         android:id="@+id/image_electronic_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="60dp"
+
                         android:src="@drawable/electricity"></ImageView>
-
-                    <ImageView
-                        android:id="@+id/image_water_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="60dp"
-                        android:src="@drawable/water"></ImageView>
-
-                    <ImageView
-                        android:id="@+id/image_area"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="60dp"
-                        android:src="@drawable/erae"></ImageView>
-                </LinearLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
-
-                <LinearLayout
-                    android:id="@+id/textgia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    >
-
-
-
                     <TextView
                         android:id="@+id/texttiendien"
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="70dp"
+
                         android:text="Giá điện"
                         android:textColor="@color/black"
                         android:textSize="14dp"
@@ -229,26 +198,96 @@
                         ></TextView>
 
                     <TextView
+                        android:id="@+id/text_electronic_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+
+                        android:text="1 triệu"
+                        android:textColor="#D2AF00"
+                        android:textSize="16dp">
+                        ></TextView>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginLeft="25dp"
+
+                    android:id="@+id/three"
+                    android:layout_toRightOf="@+id/two"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageView
+                        android:id="@+id/image_water_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:src="@drawable/water"></ImageView>
+
+
+                    <TextView
                         android:id="@+id/texttiennuoc"
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="60dp"
+
                         android:src="@drawable/electricity"
                         android:text="Giá nước"
                         android:textColor="@color/black"
                         android:textSize="14dp"></TextView>
 
+
+                    <TextView
+                        android:id="@+id/text_water_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+
+                        android:text="1 triệu"
+                        android:textColor="#D2AF00"
+                        android:textSize="16dp"></TextView>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginLeft="25dp"
+
+                    android:id="@+id/four"
+                    android:layout_toRightOf="@+id/three"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageView
+                        android:id="@+id/image_area"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:src="@drawable/erae"></ImageView>
+
                     <TextView
                         android:layout_width="wrap_content"
 
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="60dp"
+
                         android:text="Diện tích"
                         android:textColor="@color/black"
                         android:textSize="14dp"></TextView>
+                    <TextView
+                        android:id="@+id/text_area_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+
+                        android:text="60 m"
+                        android:textColor="#D2AF00"
+                        android:textSize="16dp"></TextView>
                 </LinearLayout>
+
             </RelativeLayout>
+
+
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -263,36 +302,10 @@
 
 
 
-                    <TextView
-                        android:id="@+id/text_electronic_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="60dp"
-                        android:text="1 triệu"
-                        android:textColor="#D2AF00"
-                        android:textSize="16dp">
-                        ></TextView>
 
-                    <TextView
-                        android:id="@+id/text_water_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="60dp"
-                        android:text="1 triệu"
-                        android:textColor="#D2AF00"
-                        android:textSize="16dp"></TextView>
 
-                    <TextView
-                        android:id="@+id/text_area_price"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="60dp"
-                        android:text="60 m"
-                        android:textColor="#D2AF00"
-                        android:textSize="16dp"></TextView>
+
+
                 </LinearLayout>
             </RelativeLayout>
 
