--- a/app/src/main/res/layout/activity_room_detail.xml
+++ b/app/src/main/res/layout/activity_room_detail.xml
@@ -99,6 +99,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:paddingTop="10dp"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -133,15 +134,17 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:paddingTop="10dp"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <LinearLayout
                     android:id="@+id/one"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/image_deposit"
 
@@ -149,6 +152,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="30dp"
                         android:src="@drawable/money"></ImageView>
+
                     <TextView
                         android:id="@+id/textdatcoc"
 
@@ -158,25 +162,26 @@
                         android:text="Đặt cọc"
                         android:textColor="@color/black"
                         android:textSize="14dp"></TextView>
+
                     <TextView
 
                         android:id="@+id/text_deposit_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                       android:layout_gravity="center_horizontal"
+                        android:layout_gravity="center_horizontal"
 
                         android:text="1 triệu"
                         android:textColor="#D2AF00"
                         android:textSize="16dp"></TextView>
                 </LinearLayout>
+
                 <LinearLayout
-                    android:layout_marginLeft="25dp"
                     android:id="@+id/two"
-                    android:layout_toRightOf="@+id/one"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:layout_marginLeft="25dp"
+                    android:layout_toRightOf="@+id/one"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/image_electronic_price"
@@ -184,6 +189,7 @@
                         android:layout_height="wrap_content"
 
                         android:src="@drawable/electricity"></ImageView>
+
                     <TextView
                         android:id="@+id/texttiendien"
 
@@ -205,18 +211,18 @@
                         android:text="1 triệu"
                         android:textColor="#D2AF00"
                         android:textSize="16dp">
-                        ></TextView>
+                        >
+                    </TextView>
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginLeft="25dp"
-
                     android:id="@+id/three"
-                    android:layout_toRightOf="@+id/two"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:layout_marginLeft="25dp"
+                    android:layout_toRightOf="@+id/two"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/image_water_price"
@@ -251,14 +257,13 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginLeft="25dp"
-
                     android:id="@+id/four"
-                    android:layout_toRightOf="@+id/three"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:layout_marginLeft="25dp"
+                    android:layout_toRightOf="@+id/three"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/image_area"
@@ -275,6 +280,7 @@
                         android:text="Diện tích"
                         android:textColor="@color/black"
                         android:textSize="14dp"></TextView>
+
                     <TextView
                         android:id="@+id/text_area_price"
                         android:layout_width="wrap_content"
@@ -288,6 +294,7 @@
 
             </RelativeLayout>
             <TextView
+                android:paddingTop="10dp"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -296,6 +303,7 @@
                 android:textColor="@color/black"
                 android:textSize="18dp"></TextView>
             <RelativeLayout
+                android:paddingTop="10dp"
                 android:layout_marginLeft="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -429,6 +437,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:paddingTop="10dp"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -550,6 +559,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:paddingTop="10dp"
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
