--- a/app/src/main/res/layout/warning.xml
+++ b/app/src/main/res/layout/warning.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@drawable/bg_layout_dialog"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -24,10 +26,11 @@
         android:layout_marginTop="50dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp">
 
         <Button
-            android:id="@+id/btnthoat"
+            android:id="@+id/btnthoatid"
             app:backgroundTint="@null"
             android:background="@drawable/borderbuttonexit"
             android:layout_marginLeft="50dp"
@@ -36,7 +39,7 @@
             android:textStyle="bold"
             android:text="Thoát"></Button>
         <Button
-            android:id="@+id/btnxoa"
+            android:id="@+id/btnxoaid"
             app:backgroundTint="@null"
             android:background="@drawable/borderbuttondelete"
             android:layout_marginLeft="120dp"
