--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#FFC107</color>
+    <color name="purple_700">#ECA900</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -12,5 +12,6 @@
     <color name="colorPrimaryLight">#F8F7E9</color>
     <color name="colorAccent">#333333</color>
     <color name="colorText">#ECA900</color>
-    <color name="colorLabel">#FFFFFF</color>
+    <color name="title_color">#FFFFFF</color>
+
 </resources>
