--- a/app/src/main/res/layout/warning.xml
+++ b/app/src/main/res/layout/warning.xml
@@ -8,7 +8,7 @@
     android:layout_margin="16dp">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="80dp"
         android:src="@drawable/warningdia">
     </ImageView>
 
@@ -18,34 +18,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="XÓA BÀI VIẾT VĨNH VIỄN"
-        android:textSize="35sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         android:textColor="#FF0000"
         android:gravity="center_horizontal"></TextView>
     <LinearLayout
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_weight="2"
         android:layout_marginBottom="10dp">
 
         <Button
             android:id="@+id/btnthoatid"
             app:backgroundTint="@null"
             android:background="@drawable/borderbuttonexit"
-            android:layout_marginLeft="50dp"
             android:layout_width="100dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
             android:textStyle="bold"
+            android:textSize="16sp"
             android:text="Thoát"></Button>
+
         <Button
             android:id="@+id/btnxoaid"
-            app:backgroundTint="@null"
-            android:background="@drawable/borderbuttondelete"
-            android:layout_marginLeft="120dp"
             android:layout_width="100dp"
             android:layout_height="match_parent"
+            android:background="@drawable/borderbuttondelete"
+            android:text="Xóa"
+            android:layout_weight="1"
+            android:layout_margin="5dp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            android:text="Xóa"></Button>
+            app:backgroundTint="@null"></Button>
     </LinearLayout>
 </LinearLayout>
