--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="300dp"
     android:background="@drawable/back"
     android:gravity="bottom"
     android:padding="20dp">
-    <ImageView
-        android:layout_marginTop="50dp"
-        android:id="@+id/iv_header_avatar"
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="30dp"
+        app:cardCornerRadius="50dp"
         android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:src="@drawable/home">
-    </ImageView>
+        android:layout_height="75dp">
+        <ImageView
+            android:id="@+id/iv_header_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/house_nav">
+        </ImageView>
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/tv_header_name"
         android:layout_width="wrap_content"
