--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,4 +20,9 @@
         android:name="com.trinhtien2212.findhomerental.ui.love.LoveFragment"
         android:label="@string/menu_love"
         tools:layout="@layout/fragment_love" />
+    <fragment
+        android:id="@+id/nav_warning"
+        android:name="com.trinhtien2212.findhomerental.ui.warn.WarnFragment"
+        android:label="Cảnh báo"
+        tools:layout="@layout/fragment_warn" />
 </navigation>
