--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,7 +22,7 @@
         tools:layout="@layout/fragment_love" />
     <fragment
         android:id="@+id/nav_admin"
-        android:name="com.trinhtien2212.findhomerental.MainAdminActivity"
+        android:name="com.trinhtien2212.findhomerental.ui.home.AdminFragment"
         android:label="@string/menu_admin"
-        tools:layout="@layout/activity_main_admin" />
+        tools:layout="@layout/fragment_admin" />
 </navigation>
