--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,6 +3,7 @@
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/title_color</item>
+        <item name="android:textColorSecondary">@color/title_color</item>
     </style>
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
@@ -13,5 +14,11 @@
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:textColor">@color/title_color</item>
         <item name="titleTextColor">@color/title_color</item>
+        <item name="android:actionMenuTextColor">@color/title_color</item>
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+    </style>
+    <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@color/title_color</item>
     </style>
 </resources>
