--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,7 +23,7 @@
     <fragment
         android:id="@+id/nav_warning"
         android:name="com.trinhtien2212.findhomerental.ui.warn.WarnFragment"
-        android:label="Cảnh báo"
+        android:label="@string/menu_warn"
         tools:layout="@layout/fragment_warn" />
     <fragment
         android:id="@+id/nav_admin"
