--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -1,62 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RoomListActivity">
-    <LinearLayout
-        android:id="@+id/header_title_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
-        <TextView
-            android:id="@+id/TextViewTotalResult"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="20"
-            android:textColor="#f00"
-            android:textSize="30sp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="10dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Kết quả"
-            />
-        <ImageButton
-            android:id="@+id/ImgButtonFilter"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_baseline_filter_alt_24"
-            android:background="@color/white"
-            android:layout_marginLeft="200dp"
-            android:onClick="filterDistance"
-            android:scaleType="fitXY"/>
-        <ImageButton
-            android:id="@+id/ImgButtonSort"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="0dp"
-            android:src="@drawable/ic_baseline_swap_vert_24"
-            android:background="@color/white"
-            android:onClick="sortPrice"
-            android:scaleType="fitXY"/>
+    android:id="@+id/activity_room_list_frame"
+    android:layout_height="match_parent">
 
-    </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_room"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/header_title_1"/>
+        tools:context=".RoomListActivity">
+
+        <LinearLayout
+            android:id="@+id/header_title_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/TextViewTotalResult"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
+                android:text="20"
+                android:textColor="#f00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kết quả"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:id="@+id/ImgButtonFilter"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="200dp"
+                android:background="@color/white"
+                android:onClick="filterDistance"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_baseline_filter_alt_24" />
+
+            <ImageButton
+                android:id="@+id/ImgButtonSort"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="0dp"
+                android:background="@color/white"
+                android:onClick="sortPrice"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_baseline_swap_vert_24" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_room"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/header_title_1" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
+
+    </RelativeLayout>
+
+    <com.github.mmin18.widget.RealtimeBlurView
+        android:id="@+id/realtimeBlurView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:realtimeBlurRadius="20dp"
+        app:realtimeOverlayColor="#74DAD8D8" />
+
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/pb_waiting"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_centerInParent="true" />
-
-</RelativeLayout>
+        android:layout_gravity="center"
+        android:maxWidth="50dp" />
+</FrameLayout>
