--- a/app/src/main/res/layout/report.xml
+++ b/app/src/main/res/layout/report.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Thông tin phòng trọ:"
-        android:textColor="#D2AF00"
-        android:textSize="30sp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
@@ -23,7 +23,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:text="84, Lê Văn Chí, phường Linh Trung, Thủ Đức, Hồ Chí Minh"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:layout_marginTop="25dp"
         android:padding="6dp">
     </TextView>
@@ -31,8 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Nội dung báo cáo:"
-        android:textColor="#D2AF00"
-        android:textSize="30sp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         android:layout_marginTop="25dp"
         android:layout_marginLeft="20dp">
     </TextView>
@@ -42,11 +42,10 @@
         android:layout_height="100dp"
         android:inputType="textMultiLine"
         android:hint="Nhập tại đây:"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/textareaborder"
         android:padding="6dp">
     </EditText>
     <Button
@@ -58,7 +57,7 @@
         android:text="Gửi"
         app:backgroundTint="@null"
         android:background="@drawable/borderbuttonexit"
-        android:textSize="30sp"
+        android:textSize="16sp"
         android:textAlignment="center"
         android:layout_marginBottom="30dp">
 
