--- a/app/src/main/res/layout/warning.xml
+++ b/app/src/main/res/layout/warning.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:src="@drawable/warningdia">
+        android:src="@drawable/ic_baseline_warning_24">
     </ImageView>
 
     <TextView
