--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
+                android:weightSum="10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
@@ -31,12 +32,18 @@
                 android:background="@drawable/white_rectangle_background"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent">
-
+                <ImageButton
+                    android:id="@+id/ib_my_location"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/search_icon_background"
+                    android:src="@drawable/ic_baseline_my_location_24"
+                    android:layout_weight="1"/>
                 <EditText
                     android:id="@+id/EditTextSearch"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_weight="1"
+                    android:layout_weight="8"
                     android:background="@null"
                     android:hint="Tìm theo quận, tên đường, địa điểm"
                     android:imeOptions="actionSearch"
@@ -48,6 +55,7 @@
                     android:textSize="16sp" />
 
                 <ImageButton
+                    android:layout_weight="1"
                     android:id="@+id/ImageButtonSearch"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
