--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryVariant">@color/purple_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#F35252</item>
+        <item name="colorSecondary">@color/purple_500</item>
 
 
         <item name="colorSecondaryVariant">@color/teal_700</item>
