thay đổi font lần 2

--- a/app/src/main/res/layout/my_room_item.xml
+++ b/app/src/main/res/layout/my_room_item.xml
@@ -27,6 +27,7 @@
                 android:id="@+id/titleAddress3"
                 android:text="88 Tân Hòa Đông, Quận 6"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 android:textColor="#000"
                 android:layout_toRightOf="@id/imageHome3"
                 android:layout_toEndOf="@id/imageHome3"
