--- a/app/src/main/res/layout/love_item.xml
+++ b/app/src/main/res/layout/love_item.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/titleAddress4"
                 android:text="88 Tân Hòa Đông, Quận 6"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:textColor="#000"
                 android:layout_toRightOf="@id/imageHome4"
                 android:layout_toEndOf="@id/imageHome4"
@@ -39,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/titlePrice4"
                 android:text="4,3 triệu VND/căn"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorText"
                 android:textStyle="bold"
                 android:layout_toRightOf="@id/imageHome4"
