them delete warning

--- a/app/src/main/res/layout/warning.xml
+++ b/app/src/main/res/layout/warning.xml
@@ -13,6 +13,7 @@
     </ImageView>
 
     <TextView
+        android:id="@+id/textWarning"
         android:layout_marginTop="25dp"
         android:textAlignment="center"
         android:layout_width="match_parent"
