--- a/app/src/main/res/layout/fragment_add_room_info.xml
+++ b/app/src/main/res/layout/fragment_add_room_info.xml
@@ -25,23 +25,25 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:lineHeight="100dp"
                 android:text="Giá tiền (VNĐ):"
                 android:textColor="#FF9800"
-                android:lineHeight="100dp"
 
-                android:textSize="25sp" />
+                android:textSize="22sp" />
 
             <EditText
                 android:id="@+id/txt_costPerMonth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:textSize="18sp"
                 android:layout_marginBottom="5dp"
                 android:hint="Giá tiền thuê trong tháng"
                 android:inputType="number"
                 android:lineHeight="100dp" />
 
             <EditText
+                android:textSize="18sp"
                 android:id="@+id/txt_depositCost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,6 +53,7 @@
                 android:hint="Giá tiền đặt cọc" />
 
             <EditText
+                android:textSize="18sp"
                 android:id="@+id/txt_eleCost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,6 +63,7 @@
                 android:hint="Giá tiền điện" />
 
             <EditText
+                android:textSize="18sp"
                 android:id="@+id/txt_watCost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -74,13 +78,14 @@
                 android:text="Diện tích:(m2)"
 
                 android:textColor="#FF9800"
-                android:textSize="25sp"/>
+                android:textSize="22sp"/>
 
             <EditText
                 android:id="@+id/txt_area"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:textSize="18sp"
                 android:layout_marginBottom="5dp"
                 android:inputType="number"
                 android:hint="Diện tích"/>
@@ -90,11 +95,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mô tả:"
-
                 android:textColor="#FF9800"
-                android:textSize="25sp"/>
+                android:textSize="22sp"/>
 
             <EditText
+                android:textSize="18sp"
                 android:id="@+id/txt_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -110,7 +115,7 @@
                 android:layout_width="238dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-
+                android:textSize="16sp"
                 android:layout_margin="20dp"
                 android:text="Tiếp theo"
                 android:textColor="#FFFFFF"
